# ecs_webgl-wasm

./: .gitignore  Cargo.toml  README.md  build.sh  start_server.sh
client/: Cargo.toml
client/js/: index.js  webpack.config.js
client/src/: input.rs  lib.rs
client/src/engine/: key_mapper.rs  mod.rs
client/src/math/: glm.rs  mod.rs
client/src/renderer/: mod.rs  shader.rs
server/src/: main.rs
src/: input.rs  javascript.rs  lib.rs  render_mod.rs  renderer.rs  tests.rs
src/engine/: components.rs  entities.rs  mod.rs  systems.rs
src/engine/mesh_manager/: mesh.rs  mesh_exploder.rs  mesh_loader.rs  mesh_storage.rs  mod.rs
src/engine_mod/: components.rs  entities.rs  mod.rs  rcs_mod.rs  resources.rs  systems.rs
src/renderer/: mod.rs  shader.rs
src/renderer/glsl/: basic_fragment.glsl  basic_vertex.glsl  common_functions.glsl  light_source_vertex.glsl
src/renderer/shaders/: basic_vertex.glsl
src/shaders/: basic_vertex.glsl
www/: index.html  index.js
